# tg-git-logger

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  Dockerfile.prod  ROADMAP.md  WORK_PLAN.md  docker-compose.dev.yml  docker-compose.monitoring.yml  docker-compose.prod.yml  docker-compose.yml  git-eye.md  makefile  rustfmt.toml
.claude/: settings.json  settings.local.json
.claude/commands/: new-command.md  new-endpoint.md  new-job.md  new-migration.md  rust-review.md  seaorm-entity.md  trace-flow.md
locales/: ru.json
migration/: Cargo.toml
migration/src/: lib.rs  m001_create_users.rs  m002_create_roles.rs  m003_create_user_has_role.rs  m003_create_user_roles.rs  m004_create_github_accounts.rs  m004_create_user_social_accounts.rs  m004_create_user_socials_services.rs  m005_create_telegram_accounts.rs  m005_create_user_version_control_accounts.rs  m005_create_user_version_control_services.rs  m006_create_repositories.rs  m007_create_repository_pull_request.rs  m007_create_repository_users.rs  m008_create_repository_settings.rs  m008_create_user_connection_repositories.rs  m009_create_user_notifications.rs  m20220101_000001_create_table.rs  m20260326_144331_create_repository_task_trackers.rs  m20260327_000001_add_telegram_chat_id_to_repositories.rs  m20260328_000001_rename_telegram_chat_id_to_social_chat_id_in_repositories.rs  m20260328_000002_add_unique_user_connection_repositories.rs  m20260401_000001_create_digest_subscriptions.rs  m20260401_000002_create_health_pings.rs  m20260401_000003_add_failed_since_to_health_pings.rs  m20260429_000001_create_user_preferences.rs  m20260429_000002_create_pending_notifications.rs  m20260429_000003_create_pr_reviews.rs  m20260429_000004_create_notification_log.rs  m20260429_000005_create_release_plans.rs  m20260429_000006_create_release_plan_repositories.rs  m20260429_000007_add_notifications_chat_id_to_repositories.rs  m20260429_000008_pending_notifications_user_id_nullable.rs
monitoring/loki/: loki-config.yml
monitoring/prometheus/: prometheus.yml
monitoring/promtail/: promtail-config.yml
monitoring/tempo/: tempo.yaml
src/: main.rs
src/app/: mod.rs
src/application/: mod.rs
(+781 files in other folders)
