[package]
name = "tg-bot-logger"
version = "0.1.0"
edition = "2024"

[workspace]
members = [".", "migration"]

[dependencies]
tokio = { version = "1.35", features = ["full"] }
axum = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json", "blocking"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenv = "0.15"
once_cell = "1.17"
hmac = "0.12"        # или последняя версия
sha2 = "0.10"
async-trait = "0.1.89"
chrono = "0.4.43"
regex = "1.12.2"
hex = "0.4"
teloxide = { version = "0.17.0", features = ["macros"] }

# SeaORM
sea-orm = { version = "1.1.19", features = [
    "sqlx-mysql",
    "runtime-tokio-native-tls",
    "macros",
] }
migration = { path = "migration" }
thiserror = "2.0.18"
