[package]
name = "tg-bot-logger"
version = "0.1.0"
edition = "2024"

[profile.release]
opt-level = 2
lto = false

[workspace]
members = [".", "migration"]

[dependencies]
rust-i18n = "3"
graphql_client = { version = "0.15", features = ["reqwest-blocking"] }
tokio = { version = "1.35", features = ["full"] }
tokio-cron-scheduler = "0.15.1"
axum = "0.8.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json", "blocking", "rustls-tls"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenv = "0.15"
once_cell = "1.17"
hmac = "0.12"        # или последняя версия
sha2 = "0.10"
async-trait = "0.1.89"
chrono = "0.4.43"
regex = "1.12.2"
hex = "0.4"
teloxide = { version = "0.17.0", features = ["macros"] }

# SeaORM
sea-orm = { version = "1.1.19", features = [
    "sqlx-mysql",
    "runtime-tokio-native-tls",
    "macros",
] }
migration = { path = "migration" }
thiserror = "2.0.18"
url = "2.5.8"
redis = { version = "1.0.3", features = ["tokio-comp"] }
aes-gcm = "0.11.0-rc.3"
aead = "0.6.0-rc.10"
base64 = "0.22.1"
rand = "0.8.5"
lapin = "2.5"
tokio-util = "0.7"
erased-serde = "0.4.9"
futures = "0.3.31"
strum = "0.28.0"
strum_macros = "0.28.0"
askama = "0.12"
